# mcp-shell-server

./: .gitignore  README-CN.md  README.md  build_executable.py  pyproject.toml  test_server.py
.cursor/.mcp/shrimp-task-manager/: tasks.json
src/mcp_shell_server/: backgroud_process_manager.py  backgroud_process_manager_web.py  background_process_manager.py  background_process_manager_web.py  bg_tool_handlers.py  command_validator.py  env_name_const.py  exec_tool_handler.py  interfaces.py  main.py  output_manager.py  process_manager.py  server.py  server_new.py  shell_executor.py  tool_handler.py
src/mcp_shell_server/templates/: process_detail.html  process_list.html
tests/: cmd_for_test.py  conftest.py  test_async_execute.py  test_backgground_process_manager_compatability.py  test_backgground_process_manager_compatability_macos.py  test_backgroud_process_manager.py  test_background_process_manager.py  test_background_process_manager_compatability.py  test_background_process_manager_compatability_macos.py  test_background_process_manager_integration.py  test_background_process_manager_web.py  test_bg_tool_handlers.py  test_exec_tool_handler.py  test_file.txt  test_process_manager.py  test_process_manager_integration.py  test_process_manager_integration_base.py  test_server.py  test_shell_executor.py  test_shell_executor_bg_methods.py  test_shell_executor_error_cases.py  test_shell_executor_integration.py  test_shell_executor_pipe.py  test_shell_executor_pipeline.py
